2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>

	* HeaderAttribute.cs: Removed.  Use create-native-map command-line arguments
	  instead of HeaderAttribute.Includes & HeaderAttribute.Defines.
	* make-map.cs: Moved to mono-tools/create-native-map/src/create-native-map.cs.
	* MapAttribute.cs: Moved from ../Mono.Unix.  Can now be
	  specified on Class, Delegeate, Enum, Field, & Struct (instead of just
	  Enum).  Add NativeType property.
	* NativeConvert.generated.cs: Flush (adds new .TryCopy methods to copy [Map]'d
	  structures).
	* NativeConvert.cs: Add .TryCopy methods for Statvfs.
	* Syscall.cs: Remove HeaderAttribute declaration; Markup [Map]'d structure 
	  members with [Map] attributes (or MapAttribute subclasses) to specify the 
	  native types they correspond to (used by create-native-map).
	* TypeAttributes.cs: Added; internal subclasses of MapAttribute to help
	  markup structures (e.g. so I can use [blkcnt_t] instead of 
	  [Map ("blkcnt_t")], thus minimizing the liklihood of a spelling error).

2006-09-15  Jonathan Pryor  <jonpryor@vt.edu>

	* Syscall.cs: "Remove" crypt(3), encrypt(3), setkey(3).  These use an
	  encryption algorithm which was broken years ago and could be cracked in
	  minutes on a modern machine.  This also removes a libcrypt.so dependency,
	  which means you don't need to have development packages installed to use
	  these either (since "crypt" wasn't <dllmap>'d).  These are still present,
	  but marked [Obsolete] and throw a SecurityException when invoked.

2006-09-07  Jonathan Pryor  <jonpryor@vt.edu>

	* Syscall.cs: readdir(P) is not thread-safe, so it needs to be locked so
	  that the `struct dirent' it returns is stable.

2006-04-06  Jonathan Pryor  <jonpryor@vt.edu>

	* NativeConvert.cs: Fix ToDateTime()/FromDateTime()/ToTimeT()/FromTimeT() so
	  that they take timezones into account.  Previously, results would be off
	  by an hour if Daylight Savings Time was in effect.  Fixes #78033.
