@@ -1,3 +1,9 @@
+2006-10-27  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* MapAttribute.cs: Update (adds SuppressFlags property).
+	* Syscall.cs: Mark non-flags FilePermissions enumeration members so that
+	  they aren't treated as bitfields.  Impacts e.g. S_IFDIR, S_IFCHR, etc..
+
 2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* HeaderAttribute.cs: Removed.  Use create-native-map command-line arguments
